# telegrambot-cpp

./: .gitmodules  CMakeLists.txt
include/MonkeyLearn/: DetectProfanity.h  DetectSentiment.h  MonkeyLearn.h
include/nptelebot/: Bot.h  CurlTools.h  IBot.h  Objects.h  ResponseData.h
include/nptelebot/Api/: BotApi.h  Database.h  DatabaseJSON.h  HelpersRapidJson.h  IBot.h
include/nptelebot/Bots/: BotSentimentAndAbuse.h  BotTimedMessageSaver.h  ITimedBot.h
src/: Bot.cpp  CMakeLists.txt  CurlTools.cpp  IBot.cpp  Objects.cpp  ResponseData.cpp  app.cpp  app.h  appinfo.h  main.cpp
src/Api/: BotApi.cpp  Database.cpp  DatabaseJSON.cpp  HelpersRapidJson.cpp
src/Bots/: BotSentimentAndAbuse.cpp  BotTimedMessageSaver.cpp  ITimedBot.cpp
src/MonkeyLearn/: DetectProfanity.cpp  DetectSentiment.cpp  MonkeyLearn.cpp
tools/share/cmake/: NPMacros.cmake
