FILE (GLOB_RECURSE project_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)

#SET (project_LIBS ${Boost_LIBRARIES} ${QT_LIBRARIES} ${Log4Cxx_LIBRARIES})
SET (project_BIN ${PROJECT_NAME})

ADD_EXECUTABLE(${project_BIN} ${project_SRCS} ${project_MOC_SRCS_GENERATED})
#TARGET_LINK_LIBRARIES(${project_BIN} ${project_LIBS})
SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${project_BIN} CLEAN_DIRECT_OUTPUT 1)


#
# Add third lib FIRST
#
INCLUDE_DIRECTORIES(${THIRD_FIRST_SRC}/src)

ADD_DEPENDENCIES(${project_BIN} ${THIRD_FIRST_NAME})

if(MSVC)
	TARGET_LINK_LIBRARIES( ${project_BIN} 
		${THIRD_FIRST_SRC}/lib/${CMAKE_CFG_INTDIR}/${THIRD_FIRST_NAME}.lib)
else()
	TARGET_LINK_LIBRARIES(${project_BIN} ${THIRD_FIRST_NAME})
endif()
